--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,8 +1,50 @@
-.home-page {
+.posts-container {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     align-items: center;
+    justify-content: center;  
+}
+.sort-container {
+    display: flex;
     justify-content: center;
-    
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+h4 {
+    padding-right: 20px;
+}
+.sort-container h4 {
+    margin: 0;
+    font-size: 18px;
+    background: linear-gradient(to right, #4B0082, #FF8C00);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-fill-color: transparent;
+}
+  
+.sort-btn {
+    background: none;
+    border: none;
+    color: black;
+    padding: 8px 16px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin-left: 10px;
+    cursor: pointer;
+    position: relative;
+}
+  
+.sort-btn:hover::after {
+    content: "";
+    position: absolute;
+    bottom: -2px;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background: linear-gradient(to right, #4B0082, #FF8C00);
 }
