--- a/src/pages/CreatePost.css
+++ b/src/pages/CreatePost.css
@@ -1,9 +1,18 @@
-form {
+.create-form {
+    border-radius: 10px;
+    padding-bottom: 40px;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 40px;
     width: 700px;
     margin: 0 auto;
-  }
-  
-input, .input, textarea {
+}
+
+input,
+.input,
+textarea {
     width: 100%;
     border-radius: 8px;
     border: 2px solid #ddd;
@@ -13,13 +22,14 @@ input, .input, textarea {
     box-sizing: border-box;
     font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
     outline: none;
-    
+
 }
-  
-input, .input {
+
+input,
+.input {
     height: 45px;
 }
-  
+
 label {
     margin-top: 20px;
     font-size: 18px;
@@ -28,28 +38,29 @@ label {
     color: #555;
     text-align: left;
 }
-  
-  
+
+
 label[for="rating"] {
     margin-right: 10px;
     align-items: center;
     display: flex;
 }
 
-  
-#course_rating, #prof_rating {
+
+#course_rating,
+#prof_rating {
     display: inline-block;
-    margin-left: 10px;
+    margin-left: 30px;
 }
-  
-  
-  
+
+
+
 #comment {
     height: 120px;
     resize: none;
     padding-top: 12px;
 }
-  
+
 input[type=submit] {
     width: 100%;
     height: 50px;
@@ -60,11 +71,11 @@ input[type=submit] {
     font-weight: 500;
     font-family: inherit;
     background-color: #1a1a1a;
-    color:white;
+    color: white;
     cursor: pointer;
     transition: border-color 0.25s;
     margin-top: 20px;
-  }
+}
 
 input[type=submit]:hover {
     border-color: #646cff;
